# momo

./: Cargo.toml  README.md
.github/workflows/: build.yml  gitea.yml
src/: error.rs  filetype.rs  handlers.rs  main.rs  myclap.rs  template.rs
templates/: NoResources.html  index.1.html  index.2.html
