[package]
name = "momo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
askama = "0.14.0"
clap = { version = "4.5.37", features = ["cargo", "derive"] }
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs","trace"] }
tracing-subscriber = "0.3.19"
url = "2.5.4"
thiserror = "2.0.12"
tracing = "0.1.41"

[profile.release]
#缩小编译后体积
strip = true
# strip = "debuginfo" #仅移除debug信息
lto = true      #启用链接时间优化
panic = "abort" #panic时直接abort
opt-level = "z" #优化级别
